Beefing up position components, adding position: relative to global, adding %row-center, adding $important option for shapes, extending text styles to global, adding %text-bottom

--- a/docs/views/sandbox.html
+++ b/docs/views/sandbox.html
@@ -1,5 +1,5 @@
 <h1>Sandbox</h1>
-<section class="">  
+<section class="hide">  
     <div class="gg-device border-light float-left">
         <header class="gg-header bg-primary theme-light">
             <div class="text-center"><i class="fa fa-bars"></i></div>
@@ -386,7 +386,18 @@
         <button ng-click="component.perform = !component.perform"></button>
     </div>
 
-    <div class="row-12">
+    <div class="row-12 hide">
+        <div class="row-3 bg-secondary theme-light" style="margin-bottom: 3rem">
+            <hgroup class="position-center-center text-center">
+                <h1 class="uppercase strong">Musee Picasso Paris</h1>
+                <hr class="center small thick lighten">
+                <h4>The Pablo Picasso Universe</h4>
+            </hgroup>
+            <div class="position-bottom-center">
+                <button class="shape-square-large dark overlap-bottom block"><i class="fa fa-angle-down fa-5"></i></button>
+            </div>
+        </div>
+
         <div class="pad-large bg-dark theme-light gutter row dividers-line">
             <h1 class="uppercase"><span class="color-secondary">01</span> <strong>Concept</strong></h1>
             <p class="col-6 col-12-small">
@@ -401,6 +412,44 @@
             <div class="text-center uppercase"><span class="color-darken">Client</span><span class="color-white strong">School Project</span></div>
             <div class="text-center uppercase"><span class="color-darken">Project</span><span class="color-white strong">Interactive Game</span></div>
             <div class="text-center uppercase"><span class="color-darken">Dates</span><span class="color-white strong">Dec 2013 / Jan 2014</span></div>
+        </div>
+        <div class="gutter row">
+            <hgroup>
+                <h1 class="uppercase"><span class="color-secondary">02</span> <strong>Navigation Concepts</strong></h1>
+                <strong class="uppercase">The 3 Main Ideas</strong>
+            </hgroup>
+            <hr class="thin light">
+            <div class="col-9 bg-light" style="height:300px"></div>
+            <div class="col-3">
+                <h2 class="color-secondary">Features</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis magni necessitatibus maxime sed accusamus tempora pariatur ea, voluptates accusantium consectetur perferendis soluta et nobis quisquam, nemo eum recusandae harum quos.</p>
+            </div>
+        </div>
+        <div class="row cols-4">
+            <div>
+                <h2><span class="subheading">01</span><br><strong>Timeline Navigation</strong></h2>
+            </div>
+            <div>
+                <h2><span class="subheading">02</span><br><strong>Menu Longpress</strong></h2>
+            </div>
+            <div>
+                <h2><span class="subheading">03</span><br><strong>Dot Connexion</strong></h2>
+            </div>
+        </div>
+        <div class="pad-large bg-dark theme-light">
+            <hgroup>
+                <h1 class="uppercase"><span class="color-secondary">03</span> <strong>Interfaces</strong></h1>
+                <strong class="uppercase">Main Screens</strong>
+                <hr class="thin lighten">
+            </hgroup>
+        </div>
+    </div>
+
+    <div class="row-12 pad-large bg-dark theme-light">
+        <hr class="lighten position-middle dotted">
+        <div class="row-12">
+            <h1 class="position-aboveMiddle-left">Now you can center things</h1>
+            <h6 class="position-belowMiddle-left">Like This.</h6>
         </div>
     </div>
 </section>
