--- a/scss/modules/themes/_module.scss
+++ b/scss/modules/themes/_module.scss
@@ -23,7 +23,7 @@ $color-darken-opacity: 0.4 !default;
 
 $color-white: #FFF !default;
 $color-black: #000 !default;
-$color-primary: #024959 !default;
+$color-primary: #225B66 !default;
 $color-secondary: #E74C30 !default;
 $color-primary-light: mix(white, $color-primary, $color-lighten-percent) !default;
 $color-secondary-light: mix(white, $color-secondary, $color-lighten-percent) !default;
