--- a/docs/views/sandbox.html
+++ b/docs/views/sandbox.html
@@ -448,8 +448,8 @@
     <div class="row-12 pad-large bg-dark theme-light">
         <hr class="lighten position-middle dotted">
         <div class="row-12">
-            <h1 class="position-aboveMiddle-left">Now you can center things</h1>
-            <h6 class="position-belowMiddle-left">Like This.</h6>
+            <h1 class="position-left-aboveMiddle">Now you can center things</h1>
+            <h6 class="position-left-belowMiddle">Like this, Regardless of size.</h6>
         </div>
     </div>
 </section>
