--- a/docs/views/layout.html
+++ b/docs/views/layout.html
@@ -2,30 +2,11 @@
 
 <div class="row-6">
     <div class="col-6 col-center border">
-        <div class="shape-square-medium bg-primary position{{component.position_vertical}}{{component.position_horizontal}}"></div>
+        <div class="shape-square-medium bg-primary position{{component.position_horizontal}}{{component.position_vertical}}"></div>
     </div>
 </div>
 
 <div class="row">
-    <div class="field col-6">
-        <label ng-repeat="position in [
-            '-top', 
-            '-bottom', 
-            '-below', 
-            '-above', 
-            '-middle', 
-            '-aboveTop', 
-            '-midTop', 
-            '-belowTop', 
-            '-aboveMiddle', 
-            '-belowMiddle', 
-            '-aboveBottom', 
-            '-midBottom',
-            '-belowBottom']">
-            <span>{{position}}</span>
-            <input type="radio" ng-model="component.position_vertical" ng-value="position">
-        </label>
-    </div>
     <div class="field col-6">
         <label ng-repeat="position in [
         '-left',
@@ -43,6 +24,25 @@
         '-afterCenter']">
             <span>{{position}}</span>
             <input type="radio" ng-model="component.position_horizontal" ng-value="position">
+        </label>
+    </div>
+    <div class="field col-6">
+        <label ng-repeat="position in [
+            '-top', 
+            '-bottom', 
+            '-below', 
+            '-above', 
+            '-middle', 
+            '-aboveTop', 
+            '-midTop', 
+            '-belowTop', 
+            '-aboveMiddle', 
+            '-belowMiddle', 
+            '-aboveBottom', 
+            '-midBottom',
+            '-belowBottom']">
+            <span>{{position}}</span>
+            <input type="radio" ng-model="component.position_vertical" ng-value="position">
         </label>
     </div>
 </div>
