--- a/scss/modules/panels/_components.scss
+++ b/scss/modules/panels/_components.scss
@@ -66,7 +66,7 @@
     }
 
     &-exit {
-        @include position-absolute(top, right);
+        @include position-absolute(right, top);
         padding: $alert-exit-padding;
 
         &:before {
@@ -110,7 +110,7 @@
 // ----------------
 %modal {
     @extend %panel;
-    @include position-absolute($modal-vertical, $modal-horizontal);
+    @include position-absolute($modal-horizontal, $modal-vertical);
     width: $modal-width;
 }
 
